--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trust-game",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
+    "ng": "ng --openssl-legacy-provider",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -14,10 +14,12 @@
     "@angular/common": "~12.0.4",
     "@angular/compiler": "~12.0.4",
     "@angular/core": "~12.0.4",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "~12.0.4",
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "firebase-tools": "^12.3.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
